Fix distorted user-profile-link by adding navbar-left and navbar-right flex containers.

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -42,6 +42,11 @@
 		}
 	}
 
+	.navbar-left,
+	.navbar-right {
+		display: flex;
+	}
+
 	.navbar-brand,
 	.navbar-toggle {
 		position: relative;
